[metadata]
name = robotframework-pageobjects
description = "Lets you use the page object pattern with Robot Framework and plain python"
author = "National Center for Biotechnology Information"
url = "https://github.com/ncbi/robotframework-pageobjects"
keywords = "robotframework testing testautomation selenium selenium2 webdriver web"
is_pure = 1

[auto-version]
type = git-pep440

[auto-packages]
exclude = tests
